plugins/devkit/devkit-java-tests/testData/inspections/registrationProblems/code/MyActionWrongClass.java
public class <error descr="According to its registration in plugin.xml, the class should extend 'com.intellij.openapi.actionSystem.AnAction'">MyActionWrongClass</error> extends java.util.ArrayList<String> {}